--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,8 +15,8 @@
             <a id="numbermob" href="">(097) 963-01-48</a>
         </div>
         <div class="container">
-            <h2><p>МАГАЗИН АВТОЭЛЕКТРОНИКИ</p></h2>
-            <a id="ordercall" href=""><button class="btn btn-dark">Заказать звонок</button></a>
+            <p>МАГАЗИН АВТОЭЛЕКТРОНИКИ</p>
+            <button class="btn btn-dark">Заказать звонок</button>
         </div>
     </div>
     <div class="blok2">
@@ -29,14 +29,14 @@
             <span><b>в подарок</b></span> солнцезащитный козырек!
             </p>
             <div id="number-countdown">
-                <span class="badge badge-dark"><p>1</p></span>
-                <span class="badge badge-dark"><p>5</p></span>
+                <div class="badge badge-dark"><p>1</p></div>
+                <div class="badge badge-dark"><p>5</p></div>
                 <span class="contdown"><b>:</b></span>
-                <span class="badge badge-dark"><p>3</p></span>
-                <span class="badge badge-dark"><p>8</p></span>
+                <div class="badge badge-dark"><p>3</p></div>
+                <div class="badge badge-dark"><p>8</p></div>
                 <span class="contdown"><b>:</b></span>
-                <span class="badge badge-dark"><p>5</p></span>
-                <span class="badge badge-dark"><p>9</p></span>
+                <div class="badge badge-dark"><p>5</p></div>
+                <div class="badge badge-dark"><p>9</p></div>
             </div>
             <button type="button" class="btn btn-primary btn-lg"><b>ЗАКАЗАТЬ</b></button>
         </div>
@@ -51,7 +51,7 @@
     </div>
     <div class="blok3">
             <h3><span>ХАРАКТЕРИСТИКИ</span> ВИДЕОПАРКТРОНИКА</h3>
-            <hr id="line" align="center" width="400" size="4px" color="yellow">
+            <hr id="line">
             <div class="blok3_section1">
                  <div class="blok3_text1">
                     <p class="text-black">Матрица камеры:</p>
@@ -60,7 +60,6 @@
                     <p class="text-grey">0.2 LUX</p>
                     <p class="text-black">ТВ-система:</p>
                     <p class="text-grey">PAL</p>
-                    
                  </div>
                  <div class="blok3_text2">
                     <p class="text-black">Разрешение:</p>
@@ -73,7 +72,7 @@
                  </div>
              </div>
         <div class="line">
-                <hr align="left" width="200" size="4px" color="yellow">
+                <hr align="left">
         </div>
         <div class="blok3_section1">
                 <div class="blok3_text1">
@@ -99,7 +98,7 @@
                   </div>
         </div>
         <div class="line">
-                <hr align="left" width="200" size="4px" color="yellow">
+                <hr align="left">
         </div>
         <div class="blok3_section1">
             <div class="blok3_text1">
@@ -124,7 +123,7 @@
     </div>
     <div class="blok4">
         <h4>ПРИЧИНЫ <span>КУПИТЬ ВИДЕОПАРКТРОНИК</span> У НАС</h4>
-        <hr id="line" align="center" width="400" size="4px" color="yellow">
+        <hr id="line">
         <div class="blok4_section1">
             <div class="blok4_text1">
                 <div class="center-img"><image src="image6.jpg" alt="jeep">
@@ -168,15 +167,15 @@
 </div>
 <div class="blok5">
         <p class="h3">КАК РАБОТАЕТ <span>ВИДЕОПАРКТРОНИК?</span></p>
-        <hr id="line" align="center" width="400" size="4px" color="yellow">
+        <hr id="line">
         <div class="blok5-video">
-            <video controls width="1080" height="auto" poster="video.jpg" src="https://www.youtube.com/embed/rKwriay6H1E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+            <video controls width="1080" height="auto" poster="video.jpg" src="https://www.youtube.com/embed/rKwriay6H1E" frameborder="0">
                 </video>
         </div>
 </div>
 <div class="blok6">
         <p class="h3">КАК ВЫ <span>ЭКОНОМИТЕ?</span></p>
-        <hr id="line" align="center" width="400" size="4px" color="yellow">
+        <hr id="line">
         <div class="blok6_section1">
                 <div class="blok6_text1">
                         <p class="h4">Ремонт бампера стоит от</p>
@@ -203,7 +202,7 @@
 </div>
 <div class="blok7">
         <p class="h3">ОТЗЫВЫ О НАШЕМ <span>ВИДЕОПАРКТРОНИКЕ</span></p>
-        <hr id="line" align="center" width="400" size="4px" color="yellow">
+        <hr id="line">
         <div class="blok7_section1">
                 <div class="arrow left"></div>
                 <div class="blok7-image15">
@@ -234,7 +233,7 @@
 </div>
 <div class="blok8">
         <p class="h3">ДОСТАВКА И ГАРАНТИИ</p>
-        <hr id="line" align="center" width="400" size="4px" color="yellow">
+        <hr id="line">
         <div class="blok8_section">
             <p class="blok8-h4"><b>ГАРАНТИЯ</b></p>
                 <ul>
@@ -303,7 +302,7 @@
 <div class="blok9">
         <p class="h3">ЗАКАЖИТЕ СВОЙ ВИДЕОПАРКТРОНИК <span>ДО КОНЦА ДНЯ<br>
         </span> И <span>ПОЛУЧИТЕ ПОДАРОК</span> АНТИБЛИКОВОЕ СТЕКЛО</p>
-        <hr id="line" align="center" width="400" size="4px" color="yellow">
+        <hr id="line">
         <div class="blok9_section1">
                 <div class="blok9_text1">
                         <img id="image13" src="image19.jpg" alt="mirror">
@@ -326,14 +325,14 @@
                                 <input class="form-control form-control-lg" type="text" placeholder="+7 (___) ___ __ __">
                             </div>
                             <div id="number-countdown1">
-                                  <span class="badge badge-dark"><p>1</p></span>
-                                  <span class="badge badge-dark"><p>5</p></span>
-                                  <span class="contdown"><b>:</b></span>
-                                  <span class="badge badge-dark"><p>3</p></span>
-                                  <span class="badge badge-dark"><p>8</p></span>
-                                  <span class="contdown"><b>:</b></span>
-                                  <span class="badge badge-dark"><p>5</p></span>
-                                  <span class="badge badge-dark"><p>9</p></span>
+                                <div class="badge badge-dark"><p>1</p></div>
+                                <div class="badge badge-dark"><p>5</p></div>
+                                <span class="contdown"><b>:</b></span>
+                                <div class="badge badge-dark"><p>3</p></div>
+                                <div class="badge badge-dark"><p>8</p></div>
+                                <span class="contdown"><b>:</b></span>
+                                <div class="badge badge-dark"><p>5</p></div>
+                                <div class="badge badge-dark"><p>9</p></div>
                             </div>
 
                             <button type="button" class="btn btn-primary btn-lg"><b>ЗАКАЗАТЬ</b></button>
