--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="blok2_right">
             <img id="image1" src="image1.png" alt="Видеопарктроник">
             <div class="blok2-sale">
-            <img id="image2" src="image2.png" alt="акция">
+            <img class="image2" src="image2.png" alt="акция">
             <p class="text3"><span>6999 р.</span><br>
             3999 р.</p>
         </div>
@@ -51,7 +51,7 @@
     </div>
     <div class="blok3">
             <h3><span>ХАРАКТЕРИСТИКИ</span> ВИДЕОПАРКТРОНИКА</h3>
-            <hr id="line">
+            <hr class="line-center">
             <div class="blok3_section1">
                  <div class="blok3_text1">
                     <p class="text-black">Матрица камеры:</p>
@@ -123,10 +123,10 @@
     </div>
     <div class="blok4">
         <h4>ПРИЧИНЫ <span>КУПИТЬ ВИДЕОПАРКТРОНИК</span> У НАС</h4>
-        <hr id="line">
+        <hr class="line-center">
         <div class="blok4_section1">
             <div class="blok4_text1">
-                <div class="center-img"><image src="image6.jpg" alt="jeep">
+                <div class="center-img"><img src="image6.jpg" alt="jeep">
                 </div>
                 <p class="text-yellow">Быстрый и легкий монтаж</p>
                 <p class="blok4_text-grey">Зеркало с монитором<br>
@@ -135,7 +135,7 @@
                              установок. </p>
             </div>
             <div class="blok4_text1">
-                    <div class="center-img"><image src="image7.jpg" alt="cost">
+                    <div class="center-img"><img src="image7.jpg" alt="cost">
                         </div>
                     <p class="text-yellow">Стоимость</p>
                     <p class="blok4_text-grey">Цена видеопарктроника у <br>
@@ -143,7 +143,7 @@
                         цена всего 3990 руб.</p>
                  </div>
                  <div class="blok4_text1">
-                    <div class="center-img"><image src="image8.jpg" alt="wallet">
+                    <div class="center-img"><img src="image8.jpg" alt="wallet">
                         </div>
                     <p class="text-yellow">Экономия</p>
                     <p class="blok4_text-grey">В случае наезда на<br>
@@ -156,7 +156,7 @@
                         3990 руб. </p>
                  </div>
                  <div class="blok4_text1">
-                    <div class="center-img"><image src="image9.jpg" alt="Checked">
+                    <div class="center-img"><img src="image9.jpg" alt="Checked">
                         </div>
                     <p class="text-yellow">Безопасность для пешеходов</p>
                     <p class="blok4_text-grey">при движении задним ходом <br>
@@ -167,7 +167,7 @@
 </div>
 <div class="blok5">
         <p class="h3">КАК РАБОТАЕТ <span>ВИДЕОПАРКТРОНИК?</span></p>
-        <hr id="line">
+        <hr class="line-center">
         <div class="blok5-video">
             <video controls width="1080" height="auto" poster="video.jpg" src="https://www.youtube.com/embed/rKwriay6H1E" frameborder="0">
                 </video>
@@ -175,7 +175,7 @@
 </div>
 <div class="blok6">
         <p class="h3">КАК ВЫ <span>ЭКОНОМИТЕ?</span></p>
-        <hr id="line">
+        <hr class="line-center">
         <div class="blok6_section1">
                 <div class="blok6_text1">
                         <p class="h4">Ремонт бампера стоит от</p>
@@ -202,7 +202,7 @@
 </div>
 <div class="blok7">
         <p class="h3">ОТЗЫВЫ О НАШЕМ <span>ВИДЕОПАРКТРОНИКЕ</span></p>
-        <hr id="line">
+        <hr class="line-center">
         <div class="blok7_section1">
                 <div class="arrow left"></div>
                 <div class="blok7-image15">
@@ -229,11 +229,14 @@
                              <p><b>Константин,</b> <span class="text-grey">г. Днепропетровск</span></p>
                         </div>
                 </div>  
-                <div class="arrow right"></div>
+                <div class="arrow right">
+
+                </div>
+        </div>
 </div>
 <div class="blok8">
         <p class="h3">ДОСТАВКА И ГАРАНТИИ</p>
-        <hr id="line">
+        <hr class="line-center">
         <div class="blok8_section">
             <p class="blok8-h4"><b>ГАРАНТИЯ</b></p>
                 <ul>
@@ -302,21 +305,21 @@
 <div class="blok9">
         <p class="h3">ЗАКАЖИТЕ СВОЙ ВИДЕОПАРКТРОНИК <span>ДО КОНЦА ДНЯ<br>
         </span> И <span>ПОЛУЧИТЕ ПОДАРОК</span> АНТИБЛИКОВОЕ СТЕКЛО</p>
-        <hr id="line">
+        <hr class="line-center">
         <div class="blok9_section1">
                 <div class="blok9_text1">
-                        <img id="image13" src="image19.jpg" alt="mirror">
-                        <div class="blok9-plus"><p id="plus">+</p>
+                        <img id="image19" src="image19.jpg" alt="mirror">
+                        <div class="blok9-plus"><p id="plus1">+</p>
                         </div>
                         <div class="sale">
-                                <img id="image2" src="image2.png" alt="акция">
+                                <img class="image2" src="image2.png" alt="акция">
                                 <div id="text3">
                                 <p class="text3"><span>6999 р.</span><br>
                                 3999 р.</p>
                                 </div>
                         </div>
                         <div class="blok6-image14">
-                            <img id="image14" src="image20.jpg" alt="mirror1">
+                            <img id="image20" src="image20.jpg" alt="mirror1">
                         </div>
                      </div>
                      <div class="blok9_text2">
