--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                         </div>
                      </div>
         </div>
-    <div id="blok6_button">
+    <div class="blok6_button">
     <button id="blok6_button" type="button" class="btn btn-primary btn-lg"><b>ЗАКАЗАТЬ</b></button>
 </div>
 </div>
@@ -250,7 +250,7 @@
         <div class="blok8_text1">
                 <div class="text1_logo">
                   <div class="center-img1">
-                  <img src="logo1.jpg"alt="package">
+                  <img src="logo1.jpg" alt="package">
                 </div>
                   <p class="text-yellow">
                     Оплата при получении
@@ -258,7 +258,7 @@
                   </div>
                   <div class="text1_logo1">
                       <div class="center-img1">
-                  <img src="logo2.jpg"alt="secure-shield">
+                  <img src="logo2.jpg" alt="secure-shield">
                   </div>
                   <p class="text-yellow">
                     2 года гарантии
@@ -266,7 +266,7 @@
                 </div>
                 <div class="text1_logo1">
                     <div class="center-img1">
-                  <img src="logo3.jpg"alt="coins">
+                  <img src="logo3.jpg" alt="coins">
                   </div>
                   <p class="text-yellow">
             Возврат денег <br>
