structuring and beginning adaptive

--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="style1.css">
+    <link rel="stylesheet" type="text/css" href="style/style1.css">
     <title>Магазин Автоелектроники Autoshop</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 <body>
     <div class="header">
-        <div class="container">
-            <h1 id="h1"><strong>AUTO</strong>SHOP</h1>
-            <a id="numbermob" href="">(097) 963-01-48</a>
-        </div>
-        <div class="container">
+        <div class="container-left">
+            <h1><strong>AUTO</strong>SHOP</h1>
             <p>МАГАЗИН АВТОЭЛЕКТРОНИКИ</p>
+        </div>
+        <div class="container-right">
+            <a id="numbermob" href="">(097) 963-01-48</a>
             <button class="btn btn-dark">Заказать звонок</button>
         </div>
     </div>
@@ -28,7 +28,7 @@
             <span><b>до конца дня и получите</b></span> <br>
             <span><b>в подарок</b></span> солнцезащитный козырек!
             </p>
-            <div id="number-countdown">
+           <div id="number-countdown">
                 <div class="badge badge-dark"><p>1</p></div>
                 <div class="badge badge-dark"><p>5</p></div>
                 <span class="contdown"><b>:</b></span>
@@ -41,9 +41,9 @@
             <button type="button" class="btn btn-primary btn-lg"><b>ЗАКАЗАТЬ</b></button>
         </div>
         <div class="blok2_right">
-            <img id="image1" src="image1.png" alt="Видеопарктроник">
+            <img id="image1" src="img/image1.png" alt="Видеопарктроник">
             <div class="blok2-sale">
-            <img class="image2" src="image2.png" alt="акция">
+            <img class="image2" src="img/image2.png" alt="акция">
             <p class="text3"><span>6999 р.</span><br>
             3999 р.</p>
         </div>
@@ -68,7 +68,7 @@
                     <p class="text-grey">648 x 488</p>
                  </div>
                  <div class="blok3_text3">
-                    <img src="image3.jpg" alt="Видеопарктроник">    
+                    <img src="img/image3.jpg" alt="Видеопарктроник">    
                  </div>
              </div>
         <div class="line">
@@ -94,7 +94,7 @@
                         <p class="text-grey">черный, серый</p>
                  </div>
                  <div class="blok3_text3">
-                        <img src="image4.jpg" alt="Видеопарктроник-рамка">    
+                        <img src="img/image4.jpg" alt="Видеопарктроник-рамка">    
                   </div>
         </div>
         <div class="line">
@@ -116,7 +116,7 @@
                     - Упаковка </p>
              </div>
              <div class="blok3_text3">
-                    <img src="image5.jpg" alt="Видеопарктроник-рамка">    
+                    <img src="img/image5.jpg" alt="Видеопарктроник-рамка">    
               </div>
         </div>
         <button type="button" class="btn btn-primary btn-lg"><b>ЗАКАЗАТЬ</b></button>
@@ -126,7 +126,7 @@
         <hr class="line-center">
         <div class="blok4_section1">
             <div class="blok4_text1">
-                <div class="center-img"><img src="image6.jpg" alt="jeep">
+                <div class="center-img"><img src="img/image6.jpg" alt="jeep">
                 </div>
                 <p class="text-yellow">Быстрый и легкий монтаж</p>
                 <p class="blok4_text-grey">Зеркало с монитором<br>
@@ -135,7 +135,7 @@
                              установок. </p>
             </div>
             <div class="blok4_text1">
-                    <div class="center-img"><img src="image7.jpg" alt="cost">
+                    <div class="center-img"><img src="img/image7.jpg" alt="cost">
                         </div>
                     <p class="text-yellow">Стоимость</p>
                     <p class="blok4_text-grey">Цена видеопарктроника у <br>
@@ -143,7 +143,7 @@
                         цена всего 3990 руб.</p>
                  </div>
                  <div class="blok4_text1">
-                    <div class="center-img"><img src="image8.jpg" alt="wallet">
+                    <div class="center-img"><img src="img/image8.jpg" alt="wallet">
                         </div>
                     <p class="text-yellow">Экономия</p>
                     <p class="blok4_text-grey">В случае наезда на<br>
@@ -156,7 +156,7 @@
                         3990 руб. </p>
                  </div>
                  <div class="blok4_text1">
-                    <div class="center-img"><img src="image9.jpg" alt="Checked">
+                    <div class="center-img"><img src="img/image9.jpg" alt="Checked">
                         </div>
                     <p class="text-yellow">Безопасность для пешеходов</p>
                     <p class="blok4_text-grey">при движении задним ходом <br>
@@ -180,19 +180,19 @@
                 <div class="blok6_text1">
                         <p class="h4">Ремонт бампера стоит от</p>
                         <p class="h3"><b><span>6000</span> РУБЛЕЙ</b></p>
-                        <img src="image10.jpg" alt="bamper1">
+                        <img src="img/image10.jpg" alt="bamper1">
                         <div class="blok6_img">
-                            <img id="image11" src="image11.jpg" alt="bamper2">
-                            <img id="image12" src="image12.jpg" alt="bamper3">
+                            <img id="image11" src="img/image11.jpg" alt="bamper2">
+                            <img id="image12" src="img/image12.jpg" alt="bamper3">
                         </div>
                  </div>
                  <div class="blok6_text1">
                         <p class="h4">видеопарктроник с подарком стоит</p>
                         <p class="h3"><b>ВСЕГО <span>3990</span> РУБЛЕЙ</b></p>
-                        <img id="image13" src="image13.jpg" alt="mirror">
+                        <img id="image13" src="img/image13.jpg" alt="mirror">
                         <div class="blok6-plus"><p id="plus">+</p>
                         </div>
-                        <div class="blok6-image14"><img id="image14" src="image14.jpg" alt="mirror1">
+                        <div class="blok6-image14"><img id="image14" src="img/image14.jpg" alt="mirror1">
                         </div>
                      </div>
         </div>
@@ -206,11 +206,11 @@
         <div class="blok7_section1">
                 <div class="arrow left"></div>
                 <div class="blok7-image15">
-                    <img id="image15" src="image15.jpg" alt="review">
+                    <img id="image15" src="img/image15.jpg" alt="review">
                     <div class="blok7_lap">
-                        <img src="image16.jpg" alt="lap1">
-                        <img src="image16.jpg" alt="lap1">
-                        <img src="image17.jpg" alt="lap2">
+                        <img src="img/image16.jpg" alt="lap1">
+                        <img src="img/image16.jpg" alt="lap1">
+                        <img src="img/image17.jpg" alt="lap2">
                     </div>
                 </div>
                 <div class="blok7-text">
@@ -225,7 +225,7 @@
                     видно его вообще, крепления на штатное зеркало любой машины, вообщем то что<br>
                     доктор прописал!</p>
                     <div class="blok7-reveniew">
-                            <img src="image18.jpg" alt="review name">
+                            <img src="img/image18.jpg" alt="review name">
                              <p><b>Константин,</b> <span class="text-grey">г. Днепропетровск</span></p>
                         </div>
                 </div>  
@@ -250,7 +250,7 @@
         <div class="blok8_text1">
                 <div class="text1_logo">
                   <div class="center-img1">
-                  <img src="logo1.jpg" alt="package">
+                  <img src="img/logo1.jpg" alt="package">
                 </div>
                   <p class="text-yellow">
                     Оплата при получении
@@ -258,7 +258,7 @@
                   </div>
                   <div class="text1_logo1">
                       <div class="center-img1">
-                  <img src="logo2.jpg" alt="secure-shield">
+                  <img src="img/logo2.jpg" alt="secure-shield">
                   </div>
                   <p class="text-yellow">
                     2 года гарантии
@@ -266,7 +266,7 @@
                 </div>
                 <div class="text1_logo1">
                     <div class="center-img1">
-                  <img src="logo3.jpg" alt="coins">
+                  <img src="img/logo3.jpg" alt="coins">
                   </div>
                   <p class="text-yellow">
             Возврат денег <br>
@@ -308,18 +308,18 @@
         <hr class="line-center">
         <div class="blok9_section1">
                 <div class="blok9_text1">
-                        <img id="image19" src="image19.jpg" alt="mirror">
+                        <img id="image19" src="img/image19.jpg" alt="mirror">
                         <div class="blok9-plus"><p id="plus1">+</p>
                         </div>
                         <div class="sale">
-                                <img class="image2" src="image2.png" alt="акция">
+                                <img class="image2" src="img/image2.png" alt="акция">
                                 <div id="text3">
                                 <p class="text3"><span>6999 р.</span><br>
                                 3999 р.</p>
                                 </div>
                         </div>
                         <div class="blok6-image14">
-                            <img id="image20" src="image20.jpg" alt="mirror1">
+                            <img id="image20" src="img/image20.jpg" alt="mirror1">
                         </div>
                      </div>
                      <div class="blok9_text2">
