--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         </div>
     </div>
     <div class="blok2">
+        <div class="blok2_top">
         <div class="blok2_left">
             <p class="text1">Видеопарктроник -<br>
             <span>автоновинка 2017</span> года</p>
@@ -28,7 +29,18 @@
             <span><b>до конца дня и получите</b></span> <br>
             <span><b>в подарок</b></span> солнцезащитный козырек!
             </p>
-           <div id="number-countdown">
+        </div>
+        <div class="blok2_right">
+            <img id="image1" src="img/image1.png" alt="Видеопарктроник">
+            <div class="blok2-sale">
+            <img class="image2" src="img/image2.png" alt="акция">
+            <p class="text3"><span>6999 р.</span><br>
+            3999 р.</p>
+        </div>
+        </div>
+    </div>
+        <div class="blok2_countdown">
+            <div id="number-countdown">
                 <div class="badge badge-dark"><p>1</p></div>
                 <div class="badge badge-dark"><p>5</p></div>
                 <span class="contdown"><b>:</b></span>
@@ -39,14 +51,6 @@
                 <div class="badge badge-dark"><p>9</p></div>
             </div>
             <button type="button" class="btn btn-primary btn-lg"><b>ЗАКАЗАТЬ</b></button>
-        </div>
-        <div class="blok2_right">
-            <img id="image1" src="img/image1.png" alt="Видеопарктроник">
-            <div class="blok2-sale">
-            <img class="image2" src="img/image2.png" alt="акция">
-            <p class="text3"><span>6999 р.</span><br>
-            3999 р.</p>
-        </div>
         </div>
     </div>
     <div class="blok3">
@@ -59,6 +63,7 @@
                     <p class="text-black">Минимальная освещенность:</p>
                     <p class="text-grey">0.2 LUX</p>
                     <p class="text-black">ТВ-система:</p>
+                    <hr class="line-mob" align="left">
                     <p class="text-grey">PAL</p>
                  </div>
                  <div class="blok3_text2">
@@ -83,6 +88,7 @@
                         <p class="text-grey">от -30°C до +65°C</p>
                         <p class="text-black">Габаритные размеры рамки <br>
                             номерного знака:</p>
+                        <hr class="line-mob" align="left">
                         <p class="text-grey">545 х 145 мм</p>
                  </div>
                  <div class="blok3_text2">
@@ -103,19 +109,19 @@
         <div class="blok3_section1">
             <div class="blok3_text1">
                 <p class="text-black">Комплектация:</p>
-                <p class="text-grey">- Зеркало с монитором 4,3" легко и просто крепится поверх штатного<br>
-                     в автомобиляхлюбых марок и типов кузова.<br>
+                <p class="text-grey">- Зеркало с монитором 4,3" легко и просто крепится поверх штатного<br class="br-mob">
+                     в автомобилях любых марок и типов кузова.<br class="br-mob">
+                     <br class="br-mob">
                      <br>
-                     <br>
-                    - Рамка автомобильного номера совстроенной камерой<br>
+                    - Рамка автомобильного номера совстроенной камерой<br class="br-mob">
+                    <br class="br-mob">
                     <br>
-                    <br>
-                    - Комплект установочных проводов<br>
-                    <br>
+                    - Комплект установочных проводов<br class="br-mob">
+                    <br class="br-mob">
                     <br>
                     - Упаковка </p>
              </div>
-             <div class="blok3_text3">
+             <div class="blok3_text3" id="image5">
                     <img src="img/image5.jpg" alt="Видеопарктроник-рамка">    
               </div>
         </div>
@@ -169,7 +175,7 @@
         <p class="h3">КАК РАБОТАЕТ <span>ВИДЕОПАРКТРОНИК?</span></p>
         <hr class="line-center">
         <div class="blok5-video">
-            <video controls width="1080" height="auto" poster="video.jpg" src="https://www.youtube.com/embed/rKwriay6H1E" frameborder="0">
+            <video id="video" controls width="1080" height="auto" poster="img/video.jpg" src="img/Камера заднего вида и зеркало с монитором..mp4" frameborder="0">
                 </video>
         </div>
 </div>
@@ -178,9 +184,9 @@
         <hr class="line-center">
         <div class="blok6_section1">
                 <div class="blok6_text1">
-                        <p class="h4">Ремонт бампера стоит от</p>
+                        <p class="h4" id="h4-mob">Ремонт бампера стоит от</p>
                         <p class="h3"><b><span>6000</span> РУБЛЕЙ</b></p>
-                        <img src="img/image10.jpg" alt="bamper1">
+                        <img id="image10" src="img/image10.jpg" alt="bamper1">
                         <div class="blok6_img">
                             <img id="image11" src="img/image11.jpg" alt="bamper2">
                             <img id="image12" src="img/image12.jpg" alt="bamper3">
@@ -204,33 +210,34 @@
         <p class="h3">ОТЗЫВЫ О НАШЕМ <span>ВИДЕОПАРКТРОНИКЕ</span></p>
         <hr class="line-center">
         <div class="blok7_section1">
-                <div class="arrow left"></div>
+                <div class="arrow left"id="arrow-left-pc"></div>
                 <div class="blok7-image15">
                     <img id="image15" src="img/image15.jpg" alt="review">
                     <div class="blok7_lap">
+                        <div class="arrow left" id="arrow-left-mob"></div>
                         <img src="img/image16.jpg" alt="lap1">
                         <img src="img/image16.jpg" alt="lap1">
                         <img src="img/image17.jpg" alt="lap2">
+                        <div class="arrow right" id="arrow-right-mob"></div>
                     </div>
                 </div>
                 <div class="blok7-text">
-                    <p>Опять долгие ночи в интернете в поисках обзоров и сравнений… Проблема таких <br>
-                    устройств что у них либо дизайн уродский огромный — в полтора раза больше <br>
-                    штатного, а я вообще не люблю заднее зеркало, так как за 3 года<br>
-                    вождения рабочих "каблучков" типа Кангу и Берлинго вообще привык без него обходится,<br>
-                    либо тех. данные никакие — камеры очень плохого качества… Уже думал что<br>
-                    печаль… :( Но вот за пару дней поисков наткнулся на то о чем мечтал<br>
-                    действительно — HD Recorder. Нашел его у одного из драйвечан, и у других. Все в<br>
-                    восторге от данного устройства.Качество видео очень хорошее, в машине не<br>
-                    видно его вообще, крепления на штатное зеркало любой машины, вообщем то что<br>
+                    <p>Опять долгие ночи в интернете в поисках обзоров и сравнений… Проблема таких <br class="br-mob">
+                    устройств что у них либо дизайн уродский огромный — в полтора раза больше <br class="br-mob">
+                    штатного, а я вообще не люблю заднее зеркало, так как за 3 года<br class="br-mob">
+                    вождения рабочих "каблучков" типа Кангу и Берлинго вообще привык без него обходится,<br class="br-mob">
+                    либо тех. данные никакие — камеры очень плохого качества… Уже думал что<br class="br-mob">
+                    печаль… :( Но вот за пару дней поисков наткнулся на то о чем мечтал<br class="br-mob">
+                    действительно — HD Recorder. Нашел его у одного из драйвечан, и у других. Все в<br class="br-mob">
+                    восторге от данного устройства.Качество видео очень хорошее, в машине не<br class="br-mob">
+                    видно его вообще, крепления на штатное зеркало любой машины, вообщем то что<br class="br-mob">
                     доктор прописал!</p>
                     <div class="blok7-reveniew">
                             <img src="img/image18.jpg" alt="review name">
                              <p><b>Константин,</b> <span class="text-grey">г. Днепропетровск</span></p>
                         </div>
                 </div>  
-                <div class="arrow right">
-
+                <div class="arrow right" id="arrow-right-pc">
                 </div>
         </div>
 </div>
@@ -245,7 +252,6 @@
                     <li>Если вы получили товар и он вам не понравился, мы гарантируем возврат или обмен в течение 14 дней.</li>
                 </ul>
                 <p>Мы заботимся о своей репутации, клиенты для нас на первом месте!</p>
-        <div class="blok8_text1"></div>
         </div>
         <div class="blok8_text1">
                 <div class="text1_logo">
@@ -303,50 +309,48 @@
       </div>
 </div>
 <div class="blok9">
-        <p class="h3">ЗАКАЖИТЕ СВОЙ ВИДЕОПАРКТРОНИК <span>ДО КОНЦА ДНЯ<br>
+        <p class="h3" id="blok9-h3">ЗАКАЖИТЕ СВОЙ ВИДЕОПАРКТРОНИК <span>ДО КОНЦА ДНЯ<br>
         </span> И <span>ПОЛУЧИТЕ ПОДАРОК</span> АНТИБЛИКОВОЕ СТЕКЛО</p>
         <hr class="line-center">
         <div class="blok9_section1">
                 <div class="blok9_text1">
+                        <img id="image19-mob" src="img/image13.jpg" alt="mirror">
                         <img id="image19" src="img/image19.jpg" alt="mirror">
                         <div class="blok9-plus"><p id="plus1">+</p>
                         </div>
                         <div class="sale">
-                                <img class="image2" src="img/image2.png" alt="акция">
-                                <div id="text3">
-                                <p class="text3"><span>6999 р.</span><br>
-                                3999 р.</p>
-                                </div>
+                                <img class="blok9_image2" src="img/image2.png" alt="акция">
+                                <p class="block9_text3"><span>6999р.</span><br>
+                                3999р.</p>
                         </div>
-                        <div class="blok6-image14">
+                        <div class="blok9-image14">
                             <img id="image20" src="img/image20.jpg" alt="mirror1">
                         </div>
                      </div>
-                     <div class="blok9_text2">
-                            <div id="windowlogin">
-                                <input class="form-control form-control-lg" type="text" placeholder="Введите имя">
-                                <input class="form-control form-control-lg" type="text" placeholder="+7 (___) ___ __ __">
-                            </div>
-                            <div id="number-countdown1">
-                                <div class="badge badge-dark"><p>1</p></div>
-                                <div class="badge badge-dark"><p>5</p></div>
-                                <span class="contdown"><b>:</b></span>
-                                <div class="badge badge-dark"><p>3</p></div>
-                                <div class="badge badge-dark"><p>8</p></div>
-                                <span class="contdown"><b>:</b></span>
-                                <div class="badge badge-dark"><p>5</p></div>
-                                <div class="badge badge-dark"><p>9</p></div>
-                            </div>
-
-                            <button type="button" class="btn btn-primary btn-lg"><b>ЗАКАЗАТЬ</b></button>
-                    </div>
+                <div class="blok9_text2">
+                        <div id="windowlogin">
+                            <input class="form-control form-control-lg" type="text" placeholder="Введите имя">
+                            <input class="form-control form-control-lg" type="text" placeholder="+7 (___) ___ __ __">
+                        </div>
+                        <div id="number-countdown1">
+                            <div class="badge badge-dark"><p>1</p></div>
+                            <div class="badge badge-dark"><p>5</p></div>
+                            <span class="contdown"><b>:</b></span>
+                            <div class="badge badge-dark"><p>3</p></div>
+                            <div class="badge badge-dark"><p>8</p></div>
+                            <span class="contdown"><b>:</b></span>
+                            <div class="badge badge-dark"><p>5</p></div>
+                            <div class="badge badge-dark"><p>9</p></div>
+                        </div>
+                        <button type="button" class="btn btn-primary btn-lg"><b>ЗАКАЗАТЬ</b></button>
+                </div>
         </div>
 </div>
 <div class="Futer">
-    <p>
+    <p class="futer-text">
         <br>
-        <br>
-        <br>
+        Dmitriy Garbuz<br>
+        Home Work #3<br>
     </p>
 </div>
 </body>
